# MRR_pi_with_camera

./: CMakeLists.txt  mixer_processor.cpp  mixer_processor.h  params.cpp  params.h  test_client_2.cpp  test_server_2.cpp
